objects/Support_Center_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Critical_Expert__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Critical Expert</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Critical_Intermediate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Critical Intermediate</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Critical_Novice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Critical Novice</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, do the delay rules.</description>
        <inlineHelpText>If checked, do the delay rules.</inlineHelpText>
        <label>Delay Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Important_Expert__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Important Expert</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Important_Intermediate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Important Intermediate</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Important_Novice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Important Novice</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minor_Expert__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minor Expert</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minor_Intermediate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minor Intermediate</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minor_Novice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minor Novice</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transfer</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_CCR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wait/CCR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_Critical_CCR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wait/Critical CCR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_Cust__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wait/Cust</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_Expert__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wait/Expert</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_Release__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wait/Release</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Working</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Support Center Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCC-{0000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Center Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>